[gd_scene load_steps=3 format=3 uid="uid://nba5fck4q5dg"]

[ext_resource type="Script" path="res://Scripts/Protagonist/HealthBar.gd" id="1_0fokc"]
[ext_resource type="Texture2D" uid="uid://caydt7dnhise2" path="res://Assets/Temporary/pumpkin1-1.png" id="1_sgr5e"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_0fokc")

[node name="Health_1" type="Sprite2D" parent="."]
position = Vector2(48, 48)
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_sgr5e")

[node name="Health_2" type="Sprite2D" parent="."]
position = Vector2(132, 48)
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_sgr5e")

[node name="Health_3" type="Sprite2D" parent="."]
position = Vector2(216, 48)
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_sgr5e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 1044.0
offset_top = 9.0
offset_right = 1084.0
offset_bottom = 76.0
scale = Vector2(2, 2)
size_flags_vertical = 0

[node name="SideWorld" type="TextureRect" parent="VBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_sgr5e")
expand_mode = 4
flip_v = true

[node name="MainWorld" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_sgr5e")
expand_mode = 4

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Q"
horizontal_alignment = 1
